Exercicio 9  do curso guanabara java basico

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,14 @@
 /OperadorTernario/build/
 /VerificadorIdadeSwing/nbproject/private/
 /VerificadorIdadeSwing/build/
+/LeitorDePensamentos/nbproject/private/
+/LeitorDePensamentos/build/
+/ProgamaMedia/nbproject/private/
+/ProgamaMedia/build/
+/CalcularMedia/nbproject/private/
+/CalcularMedia/build/
+/ProgamaIdade/nbproject/private/
+/ProgramaIdade/nbproject/private/
+/ProgramaIdade/build/
+/ProgamaParImparSwing/nbproject/private/
+/ProgamaParImparSwing/build/
