--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,9 @@
 /ProgramaIdade/build/
 /ProgamaParImparSwing/nbproject/private/
 /ProgamaParImparSwing/build/
+/VotacaoSwing/nbproject/private/
+/VotacaoSwing/build/
+/ProgamaPernas/ProgamaPernas/nbproject/private/
+/ProgamaPernas/ProgamaPernas/build/
+/ProjetoTriangulo/ProjetoTriangulo/nbproject/private/
+/ProjetoTriangulo/ProjetoTriangulo/build/
