Exercicio 13 curso java guanabara condicional for e swing

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /ProgamaPernas/ProgamaPernas/build/
 /ProjetoTriangulo/ProjetoTriangulo/nbproject/private/
 /ProjetoTriangulo/ProjetoTriangulo/build/
+/ProjetoTriangulo/UltraEmojiCombat/nbproject/private/
+/Exercicio13/Ercercicio13/nbproject/private/
+/Exercicio13/Ercercicio13/build/
