Exercicio vetores aula 14 java basico

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@
 /ProjetoTriangulo/UltraEmojiCombat/nbproject/private/
 /Exercicio13/Ercercicio13/nbproject/private/
 /Exercicio13/Ercercicio13/build/
+/Vetor/Vetor01/nbproject/private/
+/Vetor/Vetor01/build/
+/Vetor/Vetor02/nbproject/private/
+/Vetor/Vetor02/build/
+/Vetor/Vetor03/nbproject/private/
+/Vetor/Vetor03/build/
+/Vetor/Vetor04/nbproject/private/
+/Vetor/Vetor04/build/
+/Vetor/Vetor05/nbproject/private/
+/Vetor/Vetor05/build/
